# psscriptanalyzer-pre-commit

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pre-commit-config.yaml.example  .pre-commit-hooks.yaml  .readthedocs.yaml  .yamllint  CHANGELOG.md  MANIFEST.in  README.md  example.ps1  psscriptanalyzer_hook.py  pyproject.toml  sample-pre-commit-config.yaml  test-script.ps1
.github/: CODEOWNERS
.github/workflows/: code-quality.yaml  coverall.yaml  docs.yaml  docs.yml  quality.yaml  quality.yml  release.yaml  release.yml  sync-docs-version.yaml  sync-docs-version.yml  test-coverage.yaml  test-psscriptanalyzer-hook.yaml  test.yaml  test.yml
docs/: Makefile  api.md  conf.py  configuration.md  development.md  index.md  installation.md  usage.md
docs/_static/: .gitkeep
examples/: README.md
examples/scripts/: BadScript.ps1
tests/: test_simple.py
