[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "psscriptanalyzer-pre-commit"
version = "1.0.0"
description = "A pre-commit hook for PSScriptAnalyzer"
readme = "README.md"
license = "MIT"
maintainers = [{ name = "The Test Labs" }]
keywords = [
    "pre-commit",
    "powershell",
    "psscriptanalyzer",
    "static-analysis",
    "code-quality",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = []

[[project.authors]]
name = "Chris McQuaid"
email = "chris@thetestlabs.io"

[project.urls]
Homepage = "https://github.com/thetestlabs/psscriptanalyzer-pre-commit"
Repository = "https://github.com/thetestlabs/psscriptanalyzer-pre-commit"
Issues = "https://github.com/thetestlabs/psscriptanalyzer-pre-commit/issues"
Changelog = "https://github.com/thetestlabs/psscriptanalyzer-pre-commit/releases"

[project.scripts]
psscriptanalyzer-hook = "psscriptanalyzer_hook:main"

[tool.setuptools]
py-modules = ["psscriptanalyzer_hook"]

[tool.setuptools.packages.find]
where = ["."]
include = ["psscriptanalyzer_hook*"]

# Development dependencies (optional, for future use)
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=1.0",
    "pre-commit>=2.20.0",
]

# Tool configurations
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
